// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`augmentAPIWithCORS() should work 1`] = `
Object {
  "info": Object {
    "description": "A sample Swagger file for testing purpose.",
    "title": "Sample Swagger",
    "version": "1.0.0",
  },
  "openapi": "3.0.2",
  "paths": Object {
    "/crons/tokens": Object {
      "post": Object {
        "operationId": "ping",
        "responses": Object {
          "200": Object {
            "description": "Pong",
          },
        },
        "summary": "Checks API's availability.",
        "x-whook": Object {
          "type": "cron",
        },
      },
    },
    "/ping": Object {
      "get": Object {
        "operationId": "getPing",
        "responses": Object {
          "200": Object {
            "description": "Pong",
          },
        },
        "summary": "Checks API's availability.",
      },
      "options": Object {
        "operationId": "optionsPing",
        "responses": Object {
          "200": Object {
            "description": "Ping options",
          },
        },
        "summary": "Provides ping options.",
      },
    },
    "/users/{userid}": Object {
      "head": Object {
        "operationId": "ping",
        "parameters": Array [
          Object {
            "in": "path",
            "name": "userId",
            "type": "number",
          },
          Object {
            "in": "query",
            "name": "full",
            "type": "boolean",
          },
        ],
        "responses": Object {
          "200": Object {
            "description": "The user",
          },
        },
        "summary": "Checks API's availability.",
      },
      "options": Object {
        "operationId": "optionsWithCORS",
        "parameters": Array [
          Object {
            "in": "path",
            "name": "userId",
            "type": "number",
          },
          Object {
            "in": "query",
            "name": "full",
            "type": "boolean",
          },
        ],
        "responses": Object {
          "200": Object {
            "description": "CORS sent.",
          },
        },
        "summary": "Enable OPTIONS for CORS",
        "tags": Array [
          "CORS",
        ],
        "x-whook": Object {
          "private": true,
          "sourceOperationId": "ping",
          "suffix": "CORS",
          "type": "http",
        },
      },
    },
  },
}
`;

exports[`wrapHandlerWithCORS should add CORS to errors 1`] = `
Object {
  "headers": Object {
    "Access-Control-Allow-Headers": "Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent",
    "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
    "Access-Control-Allow-Origin": "*",
    "Vary": "Origin",
  },
}
`;

exports[`wrapHandlerWithCORS should work 1`] = `
Object {
  "response": Object {
    "headers": Object {
      "Access-Control-Allow-Headers": "Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent",
      "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
      "Access-Control-Allow-Origin": "*",
      "Vary": "Origin",
    },
    "status": 200,
  },
}
`;
